# RESC-AI

./: .gitignore  .gitmodules  README.md  arborescence.txt  docker-compose.yml  parseur.py  setup.sh
API_Skynet_Monitor/: .env  Dockerfile  bdd.sql  index.js  package-lock.json  package.json  upload.html
API_Skynet_Monitor/routes/: datasets.js  heimdall.js  models.js  prompts.js
Detection_chute/: main.py
GraPyTor/: README.md  datasets_info.md  requirements.txt
GraPyTor/WEDA-FALL/: README.md  check_overfitting_models.py  dataset_stats.py  interpolation.py  merge_dataset_WEDA.py  split_dataset.py  test_combinaison_poids_models.py  test_poids.py  test_poids_hyper.py  tests_best_mask_models.py  tests_combinaisons_models.py  tests_consumption_models.py  tests_ensemble_models.py  tests_features_models.py  tests_final_models.py  tests_mask_optuna_models.py  tests_meta_models.py  tests_models.py  tests_sensors_models.py  train_ensemble_models.py  train_models.py  train_models_hyper.py
GraPyTor/WEDA-FALL/dataset/: fall_timestamps.csv
GraPyTor/WEDA-FALL/models/: xgboost.pkl  xgboost_is_fall.pkl  xgboost_pond_is_fall.pkl  xgboost_pond_trial_has_fall.pkl  xgboost_trial_has_fall.pkl  xgboost_weighted.pkl
Heimdall/: settings.gradle.kts
Heimdall/app/: build.gradle.kts
Heimdall/app/src/main/: AndroidManifest.xml
Heimdall/app/src/main/java/fr/arthur/keusch/heimdall/: MainActivity.kt
Heimdall/app/src/main/res/drawable/: splash_icon.xml
Heimdall/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
Heimdall/gradle/: libs.versions.toml
Heimdall/gradle/wrapper/: gradle-wrapper.properties
Skynet_Monitor/: local.properties  settings.gradle.kts
Skynet_Monitor/app/: build.gradle.kts
Skynet_Monitor/app/src/androidTest/java/resc/ai/skynetmonitor/: ExampleInstrumentedTest.kt
Skynet_Monitor/app/src/main/: AndroidManifest.xml
Skynet_Monitor/app/src/main/cpp/: CMakeLists.txt  llama-android.cpp  native-lib.cpp
Skynet_Monitor/app/src/main/java/resc/ai/skynetmonitor/: MainActivity.kt
Skynet_Monitor/app/src/main/java/resc/ai/skynetmonitor/config/: AppConfig.kt
Skynet_Monitor/app/src/main/java/resc/ai/skynetmonitor/navigation/: NavRoutes.kt
Skynet_Monitor/app/src/main/java/resc/ai/skynetmonitor/service/: DeviceInfoService.kt  ModelLauncherService.kt  ModelService.kt  NativeLlama.kt  PromptService.kt  ReadOnlyDatabase.java  RemoteModel.kt
Skynet_Monitor/app/src/main/java/resc/ai/skynetmonitor/viewmodel/: DeviceInfoViewModel.kt
Skynet_Monitor/app/src/main/res/values/: strings.xml  themes.xml
Skynet_Monitor/app/src/main/res/xml/: network_security_config.xml
Skynet_Monitor/app/src/test/java/resc/ai/skynetmonitor/: ExampleUnitTest.kt
Skynet_Monitor/gradle/: libs.versions.toml
Skynet_Monitor/gradle/wrapper/: gradle-wrapper.properties
conversion ONNX/: XGBoost_converter.py
conversion ONNX/QualiteEauApp/: settings.gradle.kts
conversion ONNX/QualiteEauApp/app/: build.gradle.kts
conversion ONNX/QualiteEauApp/app/src/androidTest/java/com/dallo/qualiteeauapp/: ExampleInstrumentedTest.kt
conversion ONNX/QualiteEauApp/app/src/main/: AndroidManifest.xml
conversion ONNX/QualiteEauApp/app/src/main/java/com/dallo/qualiteeauapp/: ApiService.kt  (+1 more)
conversion ONNX/QualiteEauApp/app/src/main/res/layout/: activity_main.xml
conversion ONNX/QualiteEauApp/app/src/main/res/values/: strings.xml  themes.xml
conversion ONNX/QualiteEauApp/gradle/wrapper/: gradle-wrapper.properties
conversion ONNX/conversion/: xgboost_pond_trial_has_fall.onnx
experiments/rag/cedric/: .gitignore  api.py  droit_admin_rag.py  export_vocab.py  interface.ui  lol_champs_rag.py  main.py  message.ui  rag.py  to_db.py  to_json.py  ui.py
tests/prompts/: prompts.json  test_models.py
(+25 files in other folders)
